--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 # Server Configuration
 PORT=3000
+WEB_SERVER=http://localhost
+ALLOWED_ORIGINS=http://localhost:3000,https://your-production-domain.com
 
 # Database Configuration
-DB_HOST=localhost
+DB_HOST=your_db_host
+DB_DOMAIN=your_db_domain (optional)
 DB_PORT=1433
 DB_USER=your_db_user
 DB_PASSWORD=your_db_password
@@ -13,7 +16,7 @@ JWT_SECRET=your_jwt_secret
 JWT_EXPIRES_IN=1d
 
 # Logging Configuration
-LOG_LEVEL=info
+LOG_LEVEL=debug
 
 # Other Configuration
 NODE_ENV=development
