--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@types/swagger-jsdoc": "^6.0.4",
 		"@types/swagger-ui-express": "^4.1.8",
 		"@types/winston": "^2.4.4",
+		"crypto": "^1.0.1",
 		"dayjs": "^1.11.13",
 		"morgan": "^1.10.0",
 		"ts-node": "^10.9.2",
