--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"start": "ts-node src/server.ts",
 		"build": "tsc",
 		"start:prod": "node dist/server.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "jest --coverage"
 	},
 	"keywords": [],
 	"author": "",
@@ -27,12 +27,15 @@
 		"@types/jsonwebtoken": "^9.0.9",
 		"@types/mssql": "^9.1.7",
 		"@types/node": "^22.14.1",
+		"@types/supertest": "^6.0.3",
 		"@types/swagger-jsdoc": "^6.0.4",
 		"@types/swagger-ui-express": "^4.1.8",
 		"@types/winston": "^2.4.4",
 		"crypto": "^1.0.1",
 		"dayjs": "^1.11.13",
+		"jest": "^29.7.0",
 		"morgan": "^1.10.0",
+		"ts-jest": "^29.3.2",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.8.3",
 		"winston-daily-rotate-file": "^5.0.0"
@@ -49,14 +52,12 @@
 		"express": "^5.1.0",
 		"express-rate-limit": "^7.5.0",
 		"helmet": "^8.1.0",
-		"jest": "^29.7.0",
 		"jsonwebtoken": "^9.0.2",
 		"lodash": "^4.17.21",
 		"mssql": "^11.0.1",
 		"supertest": "^7.1.0",
 		"swagger-jsdoc": "^6.2.8",
 		"swagger-ui-express": "^5.0.1",
-		"ts-jest": "^29.3.2",
 		"winston": "^3.17.0"
 	}
 }
