Add initial implementation of Node REST Console App with Socket.IO integration
- Created .gitignore to exclude Node.js dependencies, logs, and IDE-specific files.
- Added Notes.txt for installation instructions of socket.io-client.
- Developed README.md with project description, installation, usage, and contributing guidelines.
- Generated package-lock.json and package.json with necessary dependencies: axios, socket.io-client, and winston.
- Implemented main application logic in src/index.js to connect to a Socket.IO server and handle messaging.
- Created logger.js for structured logging using Winston, with console and file transports.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@types/jsonwebtoken": "^9.0.9",
 		"@types/mssql": "^9.1.7",
 		"@types/node": "^22.14.1",
+		"@types/socket.io": "^3.0.1",
 		"@types/supertest": "^6.0.3",
 		"@types/swagger-jsdoc": "^6.0.4",
 		"@types/swagger-ui-express": "^4.1.8",
@@ -55,6 +56,8 @@
 		"jsonwebtoken": "^9.0.2",
 		"lodash": "^4.17.21",
 		"mssql": "^11.0.1",
+		"socket.io": "^4.8.1",
+		"socket.io-client": "^4.8.1",
 		"supertest": "^7.1.0",
 		"swagger-jsdoc": "^6.2.8",
 		"swagger-ui-express": "^5.0.1",
