--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,23 @@
 # Server Configuration
 PORT=3000
-WEB_SERVER=http://localhost
-ALLOWED_ORIGINS=http://localhost:3000,https://your-production-domain.com
+WEB_SERVER="http://localhost"
+ALLOWED_ORIGINS="http://localhost:3000,https://your-production-domain.com"
 
 # Database Configuration
-DB_HOST=your_db_host
-DB_DOMAIN=your_db_domain (optional)
+DB_HOST="your_db_host"
 DB_PORT=1433
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
-DB_NAME=your_db_name
+DB_USER="your_db_user"
+DB_PASSWORD="your_db_password"
+DB_NAME="your_db_name"
 
 # JWT Configuration
-JWT_SECRET=your_jwt_secret
-JWT_EXPIRES_IN=1d
+JWT_SECRET="your_jwt_secret"
+JWT_EXPIRES_IN="1d"
 
 # Logging Configuration
-LOG_LEVEL=debug
+LOG_LEVEL="debug"
 
 # Other Configuration
-NODE_ENV=development
+NODE_ENV="development"
 
-AES_SECRET_KEY=YOUR_32_CHARACTER_HEX_SECRET_KEY_HERE
+AES_SECRET_KEY="YOUR_32_CHARACTER_HEX_SECRET_KEY_HERE"
